--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 byteorder = "1.5.0"
 bytes = "1.5.0"
+crc_all = "0.2.2"
 futures-util = "0.3.30"
 nom = "7.1.3"
 srt-rs = { git = "https://github.com/fundraise-arcade/srt-rs.git", version = "0.3.0" }
